Decrease memory usage of DFA conversion.